--- a/.github/workflows/ty.yml
+++ b/.github/workflows/ty.yml
@@ -8,7 +8,7 @@
   run: pip install PyGithub
 
 - name: Run Python script
-  run: python .github/workflows/auto_thank_you.py
+  run: python .github/workflows/autoty.py
   env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     GITHUB_REPOSITORY: ${{ github.repository }}
