--- a/.github/workflows/ty.yml
+++ b/.github/workflows/ty.yml
@@ -1,15 +1,29 @@
+name: Auto Thank You for Issues
+on:
+  issues:
+    types:
+      - opened
 
-- name: Install Python
-  uses: actions/setup-python@v2
-  with:
-    python-version: '3.8'
+jobs:
+  thank-you:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
 
-- name: Install dependencies
-  run: pip install PyGithub
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'  # Set the appropriate Python version
 
-- name: Run Python script
-  run: python .github/workflows/autoty.py
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    GITHUB_REPOSITORY: ${{ github.repository }}
-    GITHUB_EVENT_PATH: ${{ github.event_path }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install PyGithub
+
+      - name: Run Python script
+        run: python .github/workflows/auto_thank_you.py
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_EVENT_PATH: ${{ github.event_path }}
