--- a/.github/workflows/autoty.yml
+++ b/.github/workflows/autoty.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install gidgethub
+          pip install Pylance
 
       - name: Run Python script
         run: python .github/workflows/autoty.py
