--- a/.github/workflows/autoty.yml
+++ b/.github/workflows/autoty.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install Pylance
+          pip install github
 
       - name: Run Python script
         run: python .github/workflows/autoty.py
