--- a/.github/workflows/autoty.yml
+++ b/.github/workflows/autoty.yml
@@ -16,14 +16,9 @@ jobs:
         with:
           python-version: "3.x" # Set the appropriate Python version
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install Pylance
-          pip install github
 
       - name: Run Python script
-        run: python .github/workflows/autoty.py
+        run: python .github/workflows/autoty.ts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
