--- a/.github/workflows/autoty.yml
+++ b/.github/workflows/autoty.yml
@@ -17,7 +17,9 @@ jobs:
           node-version: "14" # Set the appropriate Node.js version
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install typescript  # Install TypeScript
+          npm install            # Install other dependencies
 
       - name: Run TypeScript script
         run: npx ts-node .github/workflows/autoty.ts
