--- a/.github/workflows/autoty.yml
+++ b/.github/workflows/autoty.yml
@@ -7,16 +7,8 @@ on:
 jobs:
   to-the-steps:
     runs-on: ubuntu-latest
-    env:
-      ID: ${{vars.TESTSECRET}}
 
     steps:
-      - name: try byCall
-        run: echo "ValueByCall -> ${{vars.TESTSECRET}} "
-
-      - name: try byName
-        run: echo "ValueByName -> $ID"
-
       - name: Check out code
         uses: actions/checkout@v2
 
@@ -34,3 +26,6 @@ jobs:
         run: npx ts-node .github/workflows/autoty.ts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: test
+        run: echo "$GITHUB_TOKEN"
