--- a/.github/workflows/autoty.yml
+++ b/.github/workflows/autoty.yml
@@ -7,8 +7,13 @@ on:
 jobs:
   to-the-steps:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
+      - name: check me
+        run: echo "TOKEN -> $GITHUB_TOKEN"
+
       - name: Check out code
         uses: actions/checkout@v2
 
@@ -24,8 +29,3 @@ jobs:
 
       - name: Run TypeScript script
         run: npx ts-node .github/workflows/autoty.ts
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: test
-        run: echo "$GITHUB_TOKEN"
