--- a/.github/workflows/autoty.yml
+++ b/.github/workflows/autoty.yml
@@ -8,11 +8,11 @@ jobs:
   to-the-steps:
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: check me
-        run: echo "TOKEN -> $TOKEN"
+        run: echo "TOKEN -> $GITHUB_TOKEN"
 
       - name: Check out code
         uses: actions/checkout@v2
