--- a/.github/workflows/autoty.yml
+++ b/.github/workflows/autoty.yml
@@ -9,10 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      TOKEN: ${{secrets.TOKEN}}
 
     steps:
-      - name: check me
+      - name: GITHUB_TOKEN
         run: echo "TOKEN -> $GITHUB_TOKEN"
+
+      - name: TOKEN
+        run: echo "TOKEN -> $TOKEN"
 
       - name: Check out code
         uses: actions/checkout@v2
